--- a/AirBnb/AirBnb.ipynb
+++ b/AirBnb/AirBnb.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps.configure(api_key=\"AIzaSyA-V90sxavDOHRLZlhVuj8eEx_h07XHthI\")"
+    "gmaps.configure(api_key=\"AI...\")"
    ]
   },
   {
